Fixed several issues: Not able to sort page_items. Cleaned up page form. Cleaned up pages index. Fixed highlight color on firefox.

--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -21,7 +21,7 @@
         color: white;
 }
 ::-moz-selection {
-        background: red;
+        background: $purple;
         color: white;
 }
 
@@ -33,7 +33,7 @@ img::-moz-selection {
 }
 
 body {
-        -webkit-tap-highlight-color: rgba(255,0,0, 0.62);
+        -webkit-tap-highlight-color: $purple;
 }
 
 
