--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -161,11 +161,17 @@
 }
 .listed-page-header {
 	margin: 0;
+	a:hover {
+		text-decoration: none;
+	}
 }
 .listed-page-status {
 	font-weight: normal;
 	margin-bottom: 15px;
 	margin-top: 0;
+	a:hover {
+		text-decoration: none;
+	}
 }
 .listed-page-controlls {
 	margin-top: 30px;
